--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2"
   },
